Move study notebooks into separate folder

--- a/bikes/02_ets.ipynb
+++ b/bikes/02_ets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dba59349",
+   "id": "7e2be171",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75276225",
+   "id": "17d3b5ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
-    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
+    "from statsmodels.tsa.seasonal import MSTL\n",
+    "from statsmodels.tsa.api import ExponentialSmoothing\n",
     "\n",
     "from bikes.evaluate.split import train_test_split"
    ]
@@ -31,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d57af345",
+   "id": "91b92a65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,16 +52,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4946dc1",
+   "id": "bc3fe0fa",
    "metadata": {},
    "source": [
-    "## SARIMAX"
+    "## Exponential Smoothing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5d0fe65",
+   "id": "384081ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,11 +71,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9791db46",
+   "id": "6f30ef94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCATION = \"Orewa Path\"\n",
+    "LOCATION = \"Quay Street Eco Display Classic\"\n",
     "\n",
     "location_df = cycle_counts.loc[cycle_counts[\"location\"] == LOCATION].copy()\n",
     "location_df = location_df.set_index(\"date\").sort_index()\n",
@@ -87,12 +86,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc607d13",
+   "id": "400d7596",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(y_train.iloc[-300:], label=\"Observed\", lw=2)\n",
+    "ax.plot(y_train.iloc[-300:], label=\"Observed\")\n",
     "ax.set(ylabel=\"Count\")\n",
     "for tick in ax.get_xticklabels():\n",
     "    tick.set_rotation(45)\n",
@@ -103,58 +102,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66e35dba",
+   "id": "25c80968",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train_diff = y_train.diff(7).diff(1).dropna()\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 3, figsize=(12, 3.5))\n",
-    "\n",
-    "ax[0].plot(y_train_diff)\n",
-    "for tick in ax[0].get_xticklabels():\n",
-    "    tick.set_rotation(45)\n",
-    "\n",
-    "plot_acf(y_train_diff, ax=ax[1]);\n",
-    "\n",
-    "plot_pacf(y_train_diff, ax=ax[2]);\n",
-    "\n",
-    "fig.tight_layout();"
+    "stl = MSTL(y_train, periods=7)\n",
+    "result = stl.fit()\n",
+    "result.plot();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "532427e6",
+   "id": "9415eaf4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sarimax = SARIMAX(\n",
-    "    endog=y_train,\n",
-    "    order=(3, 1, 1),\n",
-    "    seasonal_order=(2, 1, 1, 7),\n",
-    "    enforce_stationarity=True,\n",
+    "ets = ExponentialSmoothing(\n",
+    "    y_train,\n",
+    "    trend=\"add\",\n",
+    "    damped_trend=True,\n",
+    "    seasonal=\"mul\",\n",
+    "    seasonal_periods=7\n",
     ")\n",
-    "sarimax = sarimax.fit()\n",
+    "ets = ets.fit()\n",
     "\n",
-    "fitted_values = sarimax.predict(start=y_train.index[0], end=y_train.index[-1])\n",
-    "forecasts = sarimax.predict(start=y_test.index[0], end=y_test.index[-1])"
+    "fitted_values = ets.predict(start=y_train.index[0], end=y_train.index[-1])\n",
+    "forecasts = ets.predict(start=y_test.index[0], end=y_test.index[-1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f9728fe",
+   "id": "9821d86d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sarimax.summary()"
+    "ets.summary()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "247b36f6",
+   "id": "41bb3d8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39ea5ba8",
+   "id": "ba4e5c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2aa2c02",
+   "id": "d307f785",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,21 +182,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7091058e",
+   "id": "c3a1aa02",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert not forecast_df[\"date\"].isna().any()"
+    "forecast_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93cdb359",
+   "id": "524123ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecast_df.to_csv(f\"./forecasts/sarimax/{LOCATION.replace(' ', '_').lower()}.csv\")"
+    "forecast_df.to_csv(f\"./forecasts/ets/{LOCATION.replace(' ', '_').lower()}.csv\")"
    ]
   }
  ],
