--- a/bikes/study_notebooks/03_sarimax.ipynb
+++ b/bikes/study_notebooks/03_sarimax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,16 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from statsmodels.tsa.seasonal import MSTL\n",
-    "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
-    "from statsmodels.graphics.tsaplots import plot_acf"
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
+    "from statsmodels.tsa.stattools import kpss, adfuller"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exponential Smoothing"
+    "# SARIMA"
    ]
   },
   {
@@ -48,18 +48,11 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(cycle_counts[\"time\"], cycle_counts[\"count\"])\n",
+    "ax.plot(cycle_counts[\"time\"], cycle_counts[\"count\"], lw=1.5)\n",
     "ax.set(title=LOCATION, ylabel=\"Count\")\n",
     "for tick in ax.get_xticklabels():\n",
     "    tick.set_rotation(45)\n",
     "fig.tight_layout();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## STL Decomposition"
    ]
   },
   {
@@ -75,21 +68,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "stl = MSTL(cycle_counts[\"count\"], periods=7)\n",
-    "result = stl.fit()\n",
-    "result.plot();"
+    "## Autocorrelation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exponential Smoothing"
+    "### Augmented Dickey Fuller (ADF) Test\n",
+    "\n",
+    "- **Null Hypothesis:** Timeseries is non-stationary.\n",
+    "- **Alternate Hypothesis:** Timeseries is stationary.\n",
+    "\n",
+    "### Kwiatkowski-Phillips-Schmidt-Shin (KPSS) Test\n",
+    "\n",
+    "- **Null Hypothesis:** Timeseries is stationary.\n",
+    "- **Alternate Hypothesis:** Timeseries is non-stationary.\n",
+    "\n",
+    "\n",
+    "**Note,** that both tests assume that the data is non-seasonal. Need other ways of formally testing for stationarity in seasonal data, see for example: https://otexts.com/fpp3/stationarity.html"
    ]
   },
   {
@@ -98,12 +98,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ExponentialSmoothing(\n",
-    "    cycle_counts[\"count\"],\n",
-    "    trend=None,\n",
-    "    damped_trend=False,\n",
-    "    seasonal=\"add\",\n",
-    "    seasonal_periods=7\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 3.5), sharey=True,)\n",
+    "\n",
+    "plot_acf(cycle_counts[\"count\"], ax=ax[0])\n",
+    "ax[0].set(xlabel=\"Lag\")\n",
+    "\n",
+    "plot_pacf(cycle_counts[\"count\"], ax=ax[1])\n",
+    "ax[1].set(xlabel=\"Lag\")\n",
+    "\n",
+    "fig.tight_layout();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Differencing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Seasonal Differencing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasonal_diffs = cycle_counts[\"count\"].diff(7).dropna()\n",
+    "seasonal_diffs.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 3.5), sharey=True,)\n",
+    "\n",
+    "plot_acf(seasonal_diffs, ax=ax[0])\n",
+    "ax[0].set(xlabel=\"Lag\")\n",
+    "\n",
+    "plot_pacf(seasonal_diffs, ax=ax[1])\n",
+    "ax[1].set(xlabel=\"Lag\")\n",
+    "\n",
+    "fig.tight_layout();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_adf = adfuller(seasonal_diffs)\n",
+    "print(f\"ADF Results:\\ntest statistic: {results_adf[0]:.2f}\\np-value: {results_adf[1]:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_kpss = kpss(seasonal_diffs)\n",
+    "print(f\"KPSS Results:\\ntest statistic: {results_kpss[0]:.2f}\\np-value: {results_kpss[1]:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SARIMA Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SARIMAX(\n",
+    "    endog=cycle_counts[\"count\"],\n",
+    "    order=(0, 0, 1),  # (1, 0, 2)\n",
+    "    seasonal_order=(0, 1, 1, 7),  # (0, 1, 1, 7)\n",
     ")\n",
     "model = model.fit()\n",
     "y_hat = model.predict(start=cycle_counts.index[0], end=cycle_counts.index[-1])"
@@ -119,9 +202,9 @@
     "ax.plot(cycle_counts[\"count\"], label=\"Observed\")\n",
     "ax.plot(y_hat, label=\"Fitted\")\n",
     "ax.set(title=LOCATION, ylabel=\"Count\")\n",
+    "ax.legend()\n",
     "for tick in ax.get_xticklabels():\n",
     "    tick.set_rotation(45)\n",
-    "ax.legend()\n",
     "fig.tight_layout();"
    ]
   },
@@ -165,89 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cross-validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TimeSeriesSplitter:\n",
-    "    def __init__(self, n_splits: int, window: int, gap: int):\n",
-    "        self.n_splits = n_splits\n",
-    "        self.window = window\n",
-    "        self.gap = gap\n",
-    "\n",
-    "    def split(self, y: pd.Series):\n",
-    "        n = len(y)\n",
-    "        start_idx = n - self.window - self.gap * (self.n_splits - 1)\n",
-    "        for _ in range(self.n_splits):\n",
-    "            end_idx = start_idx + self.window\n",
-    "            yield start_idx, end_idx\n",
-    "            start_idx = start_idx + self.gap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "actuals = []\n",
-    "forecasts = []\n",
-    "maes = []\n",
-    "\n",
-    "splitter = TimeSeriesSplitter(n_splits=5, window=14, gap=5)\n",
-    "for val_start, val_end in splitter.split(cycle_counts[\"count\"]):\n",
-    "    train = cycle_counts[\"count\"].iloc[:val_start - 1]\n",
-    "    val = cycle_counts[\"count\"].iloc[val_start:val_end]\n",
-    "\n",
-    "    model = ExponentialSmoothing(\n",
-    "        train,\n",
-    "        trend=None,\n",
-    "        damped_trend=False,\n",
-    "        seasonal=\"add\",\n",
-    "        seasonal_periods=7\n",
-    "    )\n",
-    "    model = model.fit()\n",
-    "    y_hat = model.predict(start=val.index[0], end=val.index[-1])\n",
-    "\n",
-    "    actuals.append(val)\n",
-    "    forecasts.append(y_hat)\n",
-    "    maes.append(np.mean(np.abs(val - y_hat)))\n",
-    "\n",
-    "print(f\"Mean MAE: {np.mean(maes)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot a specific fold\n",
-    "\n",
-    "fold_idx = -1\n",
-    "\n",
-    "val_start = actuals[fold_idx].index[0]\n",
-    "train = cycle_counts[\"count\"].loc[:val_start].iloc[-30:]\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "train.plot(lw=2.5, color=\"black\", label=\"\")\n",
-    "actuals[fold_idx].plot(lw=2.5, color=\"blue\", label=\"y_true\")\n",
-    "forecasts[fold_idx].plot(lw=2.5, color=\"blue\", ls=\"--\", label=\"y_hat\")\n",
-    "ax.legend(ncols=2, loc=2)\n",
-    "ax.set(xlabel=\"\", ylabel=\"Counts\", ylim=(100, 1100))\n",
-    "fig.tight_layout();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Forecasting"
+    "### Forecasting"
    ]
   },
   {
@@ -261,28 +262,35 @@
     "train = cycle_counts[\"count\"].iloc[: -n_test]\n",
     "val = cycle_counts[\"count\"].iloc[-n_test:]\n",
     "\n",
-    "model = ExponentialSmoothing(\n",
-    "    train,\n",
-    "    trend=None,\n",
-    "    damped_trend=False,\n",
-    "    seasonal=\"add\",\n",
-    "    seasonal_periods=7\n",
+    "model = SARIMAX(\n",
+    "    endog=train,\n",
+    "    order=(1, 0, 2),\n",
+    "    seasonal_order=(0, 1, 1, 7),\n",
     ")\n",
-    "model = model.fit()\n",
-    "\n",
-    "trajectories = model.simulate(\n",
-    "    nsimulations=n_test,\n",
-    "    anchor=val.index[0],\n",
-    "    repetitions=100,\n",
-    "    error=\"add\",\n",
+    "model = model.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecasts = model.get_prediction(\n",
+    "    start=val.index.min(),\n",
+    "    end=val.index.max()\n",
     ")\n",
     "\n",
-    "trajectories = trajectories.assign(\n",
-    "    **{\n",
-    "        f\"quantile_{q}\": trajectories.quantile(q=q, axis=1)\n",
-    "        for q in [0.025, 0.05, 0.5, 0.95, 0.975]\n",
-    "    }\n",
-    ")"
+    "predicted_mean = forecasts.predicted_mean.to_frame(name=\"mean\")\n",
+    "conf_int_90 = (\n",
+    "    forecasts.conf_int(alpha=0.10)\n",
+    "    .rename(columns={\"lower count\": \"lower_0.10\", \"upper count\": \"upper_0.10\"})\n",
+    ")\n",
+    "conf_int_95 = (\n",
+    "    forecasts.conf_int(alpha=0.05)\n",
+    "    .rename(columns={\"lower count\": \"lower_0.05\", \"upper count\": \"upper_0.05\"})\n",
+    ")\n",
+    "forecasts_df = pd.concat([predicted_mean, conf_int_90, conf_int_95], axis=1)"
    ]
   },
   {
@@ -296,22 +304,22 @@
     "ax.plot(train.index.values[-50:], train.values[-50:], lw=2.5, color=\"black\")\n",
     "\n",
     "ax.fill_between(\n",
-    "    trajectories.index.values,\n",
-    "    trajectories[\"quantile_0.025\"].values,\n",
-    "    trajectories[\"quantile_0.975\"].values,\n",
-    "    alpha=0.15,\n",
-    "    color=\"blue\"\n",
-    ")\n",
-    "ax.fill_between(\n",
-    "    trajectories.index.values,\n",
-    "    trajectories[\"quantile_0.05\"].values,\n",
-    "    trajectories[\"quantile_0.95\"].values,\n",
+    "    forecasts_df.index.values,\n",
+    "    forecasts_df[\"lower_0.10\"].values,\n",
+    "    forecasts_df[\"upper_0.10\"].values,\n",
     "    alpha=0.2,\n",
     "    color=\"blue\"\n",
     ")\n",
+    "ax.fill_between(\n",
+    "    forecasts_df.index.values,\n",
+    "    forecasts_df[\"lower_0.05\"].values,\n",
+    "    forecasts_df[\"upper_0.05\"].values,\n",
+    "    alpha=0.1,\n",
+    "    color=\"blue\"\n",
+    ")\n",
     "ax.plot(\n",
-    "    trajectories.index.values,\n",
-    "    trajectories[\"quantile_0.5\"].values,\n",
+    "    forecasts_df.index.values,\n",
+    "    forecasts_df[\"mean\"].values,\n",
     "    lw=2.5,\n",
     "    color=\"blue\",\n",
     "    ls=\"--\"\n",
