--- a/bikes/09_evaluate.ipynb
+++ b/bikes/09_evaluate.ipynb
@@ -351,7 +351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bikes",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
