Model training notebooks for theta and prophet models

--- a/bikes/03_sarimax.ipynb
+++ b/bikes/03_sarimax.ipynb
@@ -19,7 +19,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
@@ -76,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCATION = \"Orewa Path\"\n",
+    "LOCATION = \"Quay Street Eco Display Classic\"\n",
     "\n",
     "location_df = cycle_counts.loc[cycle_counts[\"location\"] == LOCATION].copy()\n",
     "location_df = location_df.set_index(\"date\").sort_index()\n",
@@ -107,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train_diff = y_train.diff(7).diff(1).dropna()\n",
+    "y_train_diff = y_train.diff(7).dropna()\n",
     "\n",
     "fig, ax = plt.subplots(1, 3, figsize=(12, 3.5))\n",
     "\n",
@@ -131,7 +130,7 @@
    "source": [
     "sarimax = SARIMAX(\n",
     "    endog=y_train,\n",
-    "    order=(3, 1, 1),\n",
+    "    order=(2, 1, 1),\n",
     "    seasonal_order=(2, 1, 1, 7),\n",
     "    enforce_stationarity=True,\n",
     ")\n",
@@ -181,10 +180,10 @@
     "# Save forecasts\n",
     "forecast_df = pd.merge(\n",
     "    left=test_df.rename(columns={\"count\": \"ytrue\"}),\n",
-    "    right=forecasts.to_frame(name=\"yhat_ets\"),\n",
+    "    right=forecasts.to_frame(name=\"yhat_sarimax\"),\n",
     "    left_index=True,\n",
     "    right_index=True,\n",
-    "    how=\"outer\"\n",
+    "    how=\"left\"\n",
     ")\n",
     "forecast_df = forecast_df.reset_index()"
    ]
@@ -212,7 +211,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bikes",
    "language": "python",
    "name": "python3"
   },
