--- a/bikes/04_theta.ipynb
+++ b/bikes/04_theta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e2be171",
+   "id": "f2cff1ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17d3b5ee",
+   "id": "b2e3783e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from statsmodels.tsa.seasonal import MSTL\n",
-    "from statsmodels.tsa.api import ExponentialSmoothing\n",
+    "from statsmodels.tsa.forecasting.theta import ThetaModel\n",
     "\n",
-    "from bikes.evaluate.split import train_test_split"
+    "from bikes.evaluate.split import train_test_split, TEST_PERIOD"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b92a65",
+   "id": "620135a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,16 +51,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc3fe0fa",
+   "id": "644c4985",
    "metadata": {},
    "source": [
-    "## Exponential Smoothing"
+    "## Theta Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "384081ab",
+   "id": "068c2b4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f30ef94",
+   "id": "34531a88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +85,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "400d7596",
+   "id": "17cb11f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(y_train.iloc[-300:], label=\"Observed\")\n",
+    "ax.plot(y_train.iloc[-300:], label=\"Observed\", lw=2)\n",
     "ax.set(ylabel=\"Count\")\n",
     "for tick in ax.get_xticklabels():\n",
     "    tick.set_rotation(45)\n",
@@ -102,59 +101,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25c80968",
+   "id": "830dc19f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stl = MSTL(y_train, periods=7)\n",
-    "result = stl.fit()\n",
-    "result.plot();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9415eaf4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ets = ExponentialSmoothing(\n",
-    "    y_train,\n",
-    "    trend=\"add\",\n",
-    "    damped_trend=True,\n",
-    "    seasonal=\"mul\",\n",
-    "    seasonal_periods=7\n",
-    ")\n",
-    "ets = ets.fit()\n",
+    "theta = ThetaModel(y_train)\n",
+    "theta = theta.fit()\n",
     "\n",
-    "fitted_values = ets.predict(start=y_train.index[0], end=y_train.index[-1])\n",
-    "forecasts = ets.predict(start=y_test.index[0], end=y_test.index[-1])"
+    "test_start, test_end = TEST_PERIOD\n",
+    "test_dates = pd.date_range(test_start, test_end, freq=\"D\", inclusive=\"left\")\n",
+    "forecasts = theta.forecast(steps=len(test_dates))\n",
+    "forecasts.index = test_dates"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9821d86d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ets.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41bb3d8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_timeseries(y_train, fitted_values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba4e5c9c",
+   "id": "65cdbe51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,14 +127,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d307f785",
+   "id": "dd20c531",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save forecasts\n",
     "forecast_df = pd.merge(\n",
     "    left=test_df.rename(columns={\"count\": \"ytrue\"}),\n",
-    "    right=forecasts.to_frame(name=\"yhat_ets\"),\n",
+    "    right=forecasts.to_frame(name=\"yhat_theta\"),\n",
     "    left_index=True,\n",
     "    right_index=True,\n",
     "    how=\"left\"\n",
@@ -182,21 +145,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3a1aa02",
+   "id": "c4536557",
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecast_df.head()"
+    "assert not forecast_df[\"date\"].isna().any()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "524123ef",
+   "id": "1d94a67b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecast_df.to_csv(f\"./forecasts/ets/{LOCATION.replace(' ', '_').lower()}.csv\")"
+    "forecast_df.to_csv(f\"./forecasts/theta/{LOCATION.replace(' ', '_').lower()}.csv\")"
    ]
   }
  ],
