--- a/bikes/05_prophet.ipynb
+++ b/bikes/05_prophet.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e2be171",
+   "id": "8500321f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17d3b5ee",
+   "id": "a6d4fa52",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from statsmodels.tsa.seasonal import MSTL\n",
-    "from statsmodels.tsa.api import ExponentialSmoothing\n",
+    "from prophet import Prophet\n",
     "\n",
-    "from bikes.evaluate.split import train_test_split"
+    "from bikes.evaluate.split import train_test_split, TEST_PERIOD"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b92a65",
+   "id": "441b62ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,16 +51,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc3fe0fa",
+   "id": "d34f74c6",
    "metadata": {},
    "source": [
-    "## Exponential Smoothing"
+    "## Prophet"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "384081ab",
+   "id": "dc69b233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f30ef94",
+   "id": "4b1c1bc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +85,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "400d7596",
+   "id": "74708cda",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(y_train.iloc[-300:], label=\"Observed\")\n",
+    "ax.plot(y_train.iloc[-500:], label=\"Observed\")\n",
     "ax.set(ylabel=\"Count\")\n",
     "for tick in ax.get_xticklabels():\n",
     "    tick.set_rotation(45)\n",
@@ -102,76 +101,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25c80968",
+   "id": "ee64cb0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stl = MSTL(y_train, periods=7)\n",
-    "result = stl.fit()\n",
-    "result.plot();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9415eaf4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ets = ExponentialSmoothing(\n",
-    "    y_train,\n",
-    "    trend=\"add\",\n",
-    "    damped_trend=True,\n",
-    "    seasonal=\"mul\",\n",
-    "    seasonal_periods=7\n",
+    "prophet_train_df = (\n",
+    "    train_df\n",
+    "    .drop(columns=[\"location\"])\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"date\": \"ds\", \"count\": \"y\"})\n",
     ")\n",
-    "ets = ets.fit()\n",
     "\n",
-    "fitted_values = ets.predict(start=y_train.index[0], end=y_train.index[-1])\n",
-    "forecasts = ets.predict(start=y_test.index[0], end=y_test.index[-1])"
+    "prophet = Prophet().fit(prophet_train_df)\n",
+    "\n",
+    "test_start, test_end = TEST_PERIOD\n",
+    "test_dates = pd.date_range(test_start, test_end, freq=\"D\", inclusive=\"left\")\n",
+    "forecasts = prophet.predict(pd.DataFrame({\"ds\": test_dates}))[[\"ds\", \"yhat\"]]\n",
+    "forecasts = forecasts.set_index(\"ds\").rename(columns={\"yhat\": \"yhat_prophet\"})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9821d86d",
+   "id": "7a64620d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ets.summary()"
+    "plot_timeseries(y_test, forecasts[\"yhat_prophet\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41bb3d8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_timeseries(y_train, fitted_values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba4e5c9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_timeseries(y_test, forecasts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d307f785",
+   "id": "926ac103",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save forecasts\n",
     "forecast_df = pd.merge(\n",
     "    left=test_df.rename(columns={\"count\": \"ytrue\"}),\n",
-    "    right=forecasts.to_frame(name=\"yhat_ets\"),\n",
+    "    right=forecasts,\n",
     "    left_index=True,\n",
     "    right_index=True,\n",
     "    how=\"left\"\n",
@@ -182,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3a1aa02",
+   "id": "b7b91466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,11 +161,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "524123ef",
+   "id": "f46f7a93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecast_df.to_csv(f\"./forecasts/ets/{LOCATION.replace(' ', '_').lower()}.csv\")"
+    "forecast_df.to_csv(f\"./forecasts/prophet/{LOCATION.replace(' ', '_').lower()}.csv\")"
    ]
   }
  ],
