Finish RNN model training notebook

--- a/bikes/03_sarimax.ipynb
+++ b/bikes/03_sarimax.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCATION = \"Quay Street Eco Display Classic\"\n",
+    "LOCATION = \"Dominion Road\"\n",
     "\n",
     "location_df = cycle_counts.loc[cycle_counts[\"location\"] == LOCATION].copy()\n",
     "location_df = location_df.set_index(\"date\").sort_index()\n",
