Model training notebook for LSTMs

--- a/bikes/07_lstm.ipynb
+++ b/bikes/07_lstm.ipynb
@@ -59,7 +59,7 @@
    "id": "f43975b7",
    "metadata": {},
    "source": [
-    "## RNN"
+    "## LSTM"
    ]
   },
   {
@@ -69,15 +69,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class RnnForecaster(nn.Module):\n",
+    "class LstmForecaster(nn.Module):\n",
     "    def __init__(self,  horizon: int, input_size: int = 1, hidden_size: int = 25, num_layers: int =1):\n",
     "        super().__init__()\n",
-    "        self.rnn = nn.RNN(input_size=input_size, hidden_size=hidden_size, num_layers=num_layers, batch_first=True)\n",
-    "        self.ho = nn.Linear(in_features=hidden_size, out_features=horizon)\n",
+    "        self.lstm = nn.LSTM(input_size=input_size, hidden_size=hidden_size, num_layers=num_layers, batch_first=True)\n",
+    "        self.linear = nn.Linear(in_features=hidden_size, out_features=horizon)\n",
     "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        out_, _ = self.rnn(x)\n",
-    "        return self.ho(out_)"
+    "        out_, _ = self.lstm(x)\n",
+    "        return self.linear(out_)"
    ]
   },
   {
@@ -147,14 +147,14 @@
    "outputs": [],
    "source": [
     "# Training loop\n",
-    "model = RnnForecaster(horizon=out_seq_length)\n",
+    "model = LstmForecaster(horizon=out_seq_length)\n",
     "\n",
     "loss_fn = nn.MSELoss()\n",
     "optimizer = Adam(model.parameters(), lr=1e-03)\n",
     "\n",
     "model.train()\n",
     "iteration_loss = []\n",
-    "n_epochs = 200\n",
+    "n_epochs = 100\n",
     "pgbar = tqdm(range(n_epochs))\n",
     "for epoch in pgbar:\n",
     "    for X, y in dataloader:\n",
@@ -219,7 +219,7 @@
     "# Save forecasts\n",
     "forecast_df = pd.merge(\n",
     "    left=test_df.rename(columns={\"count\": \"ytrue\"}),\n",
-    "    right=forecasts.to_frame(name=\"yhat_rnn\"),\n",
+    "    right=forecasts.to_frame(name=\"yhat_lstm\"),\n",
     "    left_index=True,\n",
     "    right_index=True,\n",
     "    how=\"left\"\n",
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecast_df.to_csv(f\"./forecasts/rnn/{LOCATION.replace(' ', '_').lower()}.csv\")"
+    "forecast_df.to_csv(f\"./forecasts/lstm/{LOCATION.replace(' ', '_').lower()}.csv\")"
    ]
   }
  ],
