WIP DeepAR modelling notebook

--- a/bikes/07_lstm.ipynb
+++ b/bikes/07_lstm.ipynb
@@ -250,7 +250,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bikes",
    "language": "python",
    "name": "python3"
   },
